FIX JUMP + STYLE

--- a/css/style.css
+++ b/css/style.css
@@ -266,15 +266,15 @@
   }
 
   60% {
-    bottom: 75px;
+    bottom: 80px;
   }
 
   70% {
-    bottom: 70px;
+    bottom: 80px;
   }
 
   80% {
-    bottom: 65px;
+    bottom: 70px;
   }
 
   90% {
